fix overflow, fixed page

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 
 body {
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
